fix some bugs on dark mode

--- a/template/assets/css/main.css
+++ b/template/assets/css/main.css
@@ -223,20 +223,6 @@ a {
 	color: #1abc9c;
 }
 
-strong,
-b {
-	color: #555;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	color: #555;
-}
-
 blockquote {
 	border-left-color: rgba(144, 144, 144, 0.25);
 }
